<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="feedsVM" type="com.jayeshsapplication.app.modules.feeds.data.viewmodel.FeedsVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackhelloayush"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnhelloayush"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearBase"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyle">
                <LinearLayout android:id="@+id/linearRowhelloayush"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_55pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/txtHelloAyush"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.72"
                        android:layout_width="0dp"
                        android:text="@{feedsVM.feedsModel.txtHelloAyush}"
                        style="@style/txtNotoSansnotosansregular22" tools:text="@string/lbl_hello_ayush"/>
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_18"
                        android:id="@+id/viewEllipse193"
                        android:layout_height="@dimen/_36pxh"
                        android:layout_marginBottom="@dimen/_25pxv"
                        android:layout_marginStart="@dimen/_236pxh"
                        android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_36pxh"/>
                </LinearLayout>
                <androidx.appcompat.widget.SearchView
                    android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_29_955"
                    android:gravity="center_horizontal"
                    android:id="@+id/searchViewSearchForm"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_43pxv"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="match_parent"
                    android:theme="@style/searchViewSearchForm"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="@string/lbl_explore" app:searchIcon="@drawable/img_search"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBrowseBy"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_150pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{feedsVM.feedsModel.txtBrowseBy}"
                style="@style/txtNotoSansnotosansmedium20" tools:text="@string/lbl_browse_by"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowgrouptwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_175pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGroupTwo"
                    style="@style/txtSolidRounded"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@{feedsVM.feedsModel.txtGroupTwo}"
                    tools:text="@string/lbl_latest" />
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupThree"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_width="wrap_content"
                    android:paddingBottom="@dimen/_2pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@{feedsVM.feedsModel.txtGroupThree}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_older"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeeds"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_36pxh}" tools:itemCount="10" tools:listitem="@layout/row_feeds"/>
        </LinearLayout>
    </FrameLayout>
</layout>
