<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="feedsRowModel" type="com.jayeshsapplication.app.modules.feeds.data.model.FeedsRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumntheverge1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowtheverge"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageImageThree"
                android:layout_height="@dimen/_42pxh"
                android:layout_width="@dimen/_42pxh"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_image3}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image3"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumntheverge2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_weight="0.62" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTheVerge"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{feedsRowModel.txtTheVerge}"
                    style="@style/txtRobotoromanmedium15" tools:text="@string/lbl_the_verge"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTechNews"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{feedsRowModel.txtTechNews}"
                    style="@style/txtRobotoromanregular12" tools:text="@string/lbl_tech_news"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:id="@+id/txtMetaexplainsh"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:text="@{feedsRowModel.txtMetaexplainsh}"
            style="@style/txtRobotoromanregular12_1" tools:text="@string/msg_meta_explains_h"/>
        <FrameLayout android:id="@+id/frameStackbookmark"
            android:layout_height="@dimen/_254pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_364pxh">
            <ImageView android:id="@+id/imageImageTwo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_254pxh"
                android:layout_width="@dimen/_364pxh"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_image2}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
            <ImageView android:id="@+id/imageBookmark"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_12pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_bookmark"
                tools:ignore="ContentDescription" tools:src="@drawable/img_bookmark"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtViewall9Comm"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{feedsRowModel.txtViewall9Comm}"
            style="@style/txtRobotoromanregular11" tools:text="@string/msg_view_all_9_comm"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRow"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowfavorite"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.26" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageFavorite"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_favorite"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_favorite"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLikesCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="@{feedsRowModel.txtLikesCounter}"
                    style="@style/txtRobotoromanlight11" tools:text="@string/lbl_21_likes"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_55pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.74" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMail"
                    android:layout_height="@dimen/_17pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_mail"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mail"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCommentsCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.51"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="@{feedsRowModel.txtCommentsCounter}"
                    style="@style/txtRobotoromanlight11" tools:text="@string/lbl_9_comments"/>
                <ImageView android:id="@+id/imageShare"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_48pxh"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_share"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_share"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtShareOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.23"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="@{feedsRowModel.txtShareOne}"
                    style="@style/txtRobotoromanlight11" tools:text="@string/lbl_share"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
